--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+<button class="class">SING!!!</button>
     <h1> My Singing Friends</h1>
     <div class="Friend">
         <h3> Friend</h3>
